Fix scrollbar problem.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,13 +20,13 @@ body {
 	/*IE 6-10 not support*/
 }
 .timeline {
-	overflow: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
 	overflow: -moz-scrollbars-none;
 }
 #skill-box {
-	overflow: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
 	overflow: -moz-scrollbars-none;
@@ -103,7 +103,7 @@ body {
 		display: flex;
 	  	justify-content: center;
 	  	flex-direction: column;
-		overflow: scroll;
+		overflow-y: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		overflow: -moz-scrollbars-none;
 		overflow-x: hidden;
@@ -191,7 +191,7 @@ body {
 		padding: 0;
 		position: absolute;
 		border:  none;
-		overflow: scroll;
+		overflow-y: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		overflow: -moz-scrollbars-none;
 		overflow-x: hidden;
@@ -231,6 +231,7 @@ body {
 		padding: 0;
 	}
 	#link-bar {
+		position: absolute;
 		width: 100%;
 		height: 8%;
 		z-index: 99;
@@ -257,14 +258,14 @@ body {
 	#content {
 		position: absolute;
 		height: 80vh;
-		width: 55%;
+		width: 60%;
 		left: 40%;
-		top: 10%;
+		top: 0;
 
 		display: flex;
 	  	justify-content: center;
 	  	flex-direction: column;
-		overflow: scroll;
+		overflow-y: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		overflow: -moz-scrollbars-none;
 		overflow-x: hidden;
@@ -347,7 +348,7 @@ body {
 		padding: 0;
 		position: absolute;
 		border:  none;
-		overflow: scroll;
+		overflow-y: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		overflow: -moz-scrollbars-none;
 		overflow-x: hidden;
@@ -415,7 +416,7 @@ body {
 		top: 0;
 		height: 50%;
 		width: 100%;
-		overflow: scroll;
+		overflow-y: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		overflow: -moz-scrollbars-none;
 		overflow-x: hidden;
@@ -474,7 +475,7 @@ body {
 		height: 55vh;
 	}
 	#content {
-		overflow: visible;
+		overflow-y: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		overflow: -moz-scrollbars-none;
 		overflow-x: hidden;
